GNOME Bugzilla – Bug 722023
Non-void function should return a value
Last modified: 2014-02-09 15:22:13 UTC
Some Non-void functions use g_return_if_fail, which should be replaced by g_return_val_if_fail. gkr/gkr-backend.vala: Gkr.Backend.construct gkr/gkr-backend.vala: Gkr.Backend.instance ssh/seahorse-ssh-key-properties.c: seahorse_ssh_key_properties_show
Created attachment 266134 [details] [review] Fix "Non-void function should return a value"
This one is a vala bug #722090 gkr/gkr-backend.vala: Gkr.Backend.construct The other two are fixed by the patch.
Comment on attachment 266134 [details] [review] Fix "Non-void function should return a value" Attachment 266134 [details] pushed as 766d384 - Fix "Non-void function should return a value"
Gkr.Backend.instance is not fixed. Gkr.Backend.initialize: void function should not return a value.
Please include complete compiler output or provide a patch. Otherwise we could go back and forth on this forever :) Thank you.
gkr-backend.c:464:2: error: void function 'seahorse_gkr_backend_initialize' should not return a value [-Wreturn-type] gkr-backend.c:480:2: error: non-void function 'seahorse_gkr_backend_instance' should return a value [-Wreturn-type] gkr-backend.c:824:2: error: non-void function 'seahorse_gkr_backend_constructor' should return a value [-Wreturn-type]
Created attachment 266329 [details] [review] Fix some return_(val_)_if_fail mismatches
Attachment 266329 [details] pushed as 395a5ef - Fix some return_(val_)_if_fail mismatches