Fix "Non-void function should return a value"

https://bugzilla.gnome.org/show_bug.cgi?id=722023